[package]
name = "smallvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
smithay = { git = "https://github.com/Smithay/smithay.git", features = [
    "desktop",
    "backend_winit",
    "wayland_frontend",
    "backend_session",
    "backend_session_libseat",
    "backend_udev",
    "backend_libinput",
    "backend_drm"
], default-features = false }
